--- a/ContosoCrafts.Website/Pages/Index.cshtml
+++ b/ContosoCrafts.Website/Pages/Index.cshtml
@@ -1,19 +1,12 @@
 ﻿
 @page
+@using ContosoCrafts.Website.Components
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
-<div class="card-columns">
-    @foreach (var product in Model.Products)
-    {
-        <div class="card">
-            <div class="card-img" style="background-image: url('@product.Image');">
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">@product.Title</h5>
-            </div>
-        </div>
-    }
-</div>
+
+@(await Html.RenderComponentAsync<ProductList>(RenderMode.ServerPrerendered))
+
+<script src="_framework/blazor.server.js"></script>
